cleaning student data

--- a/school_district_analysis/PyCitySchools.ipynb
+++ b/school_district_analysis/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "6ba74b99",
    "metadata": {},
    "outputs": [],
@@ -13,30 +13,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "43287a8b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Files to load\n",
     "school_path_load = os.path.join(\"Resources\",\"schools_complete.csv\")\n",
-    "student_path_load = (\"Resources\",\"students_complete.csv\")\n"
+    "student_path_load = os.path.join(\"Resources\",\"students_complete.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "71f78296",
    "metadata": {},
    "outputs": [],
    "source": [
-    "school_data_df = pd.read_csv(school_path_load)"
+    "sc_df = pd.read_csv(school_path_load)\n",
+    "st_df = pd.read_csv(student_path_load)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8aa7c3b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School ID      15\n",
+       "school_name    15\n",
+       "type           15\n",
+       "size           15\n",
+       "budget         15\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc_df.count()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7ce5ba0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID       39170\n",
+       "student_name     39170\n",
+       "gender           39170\n",
+       "grade            39170\n",
+       "school_name      39170\n",
+       "reading_score    39170\n",
+       "math_score       39170\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "760345ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "School ID      0\n",
+       "school_name    0\n",
+       "type           0\n",
+       "size           0\n",
+       "budget         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "49521aa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Student ID       0\n",
+       "student_name     0\n",
+       "gender           0\n",
+       "grade            0\n",
+       "school_name      0\n",
+       "reading_score    0\n",
+       "math_score       0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "e07c9fde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lindaperez/opt/anaconda3/envs/PythonData/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n"
+     ]
+    }
+   ],
+   "source": [
+    "prefixes_suffixes= {'Dr.','Mr.','Mrs.','Miss','MD',\"DDS\",\"DVM\",\"Ph.D\"}\n",
+    "for word in prefixes_suffixes:\n",
+    "    st_df['student_name'] = st_df['student_name'].str.replace(word,\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c7891f29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           Paul Bradley\n",
+       "1           Victor Smith\n",
+       "2        Kevin Rodriguez\n",
+       "3          Richard Scott\n",
+       "4             Bonnie Ray\n",
+       "              ...       \n",
+       "39165       Donna Howard\n",
+       "39166          Dawn Bell\n",
+       "39167     Rebecca Tanner\n",
+       "39168       Desiree Kidd\n",
+       "39169    Carolyn Jackson\n",
+       "Name: student_name, Length: 39170, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st_df['student_name'] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aa7c3b5",
+   "id": "fa3262fe",
    "metadata": {},
    "outputs": [],
    "source": []
