--- a/school_district_analysis/cleaning_student_names.ipynb
+++ b/school_district_analysis/cleaning_student_names.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b2755d7d",
+   "id": "84e51301",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3cdaa8c1",
+   "id": "e2c6650d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0b3ae6ce",
+   "id": "e86c9a3c",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "2acde665",
+   "id": "d0ac0278",
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a678cd95",
+   "id": "b1ed91bc",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8eaab6fd",
+   "id": "d633ee4a",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5f819447",
+   "id": "148f01e2",
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "33bea011",
+   "id": "77cf63d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "450677aa",
+   "id": "f2ec50e5",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5cd3bebb",
+   "id": "71c417dc",
    "metadata": {},
    "outputs": [
     {
@@ -1257,8 +1257,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "id": "842dbc92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Student ID', 'student_name', 'gender', 'grade', 'school_name',\n",
+       "       'reading_score', 'math_score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d402035c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sc_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sw/n956m5h93_37t1tk0cd_kjk00000gn/T/ipykernel_19488/184375045.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msc_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'sc_df' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "55260be5",
+   "id": "0bfa732f",
    "metadata": {},
    "outputs": [],
    "source": []
