--- a/school_district_analysis/PyCitySchools.ipynb
+++ b/school_district_analysis/PyCitySchools.ipynb
@@ -1763,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "13bd2397",
+   "id": "cdb7ff7d",
    "metadata": {},
    "outputs": [
     {
@@ -2387,8 +2387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "97edd2cc",
+   "execution_count": 145,
+   "id": "30fa95ce",
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2555,10 +2555,318 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f69debcc",
+   "execution_count": 146,
+   "id": "d3e30414",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>school_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,976</td>\n",
+       "      <td>$3,124,928</td>\n",
+       "      <td>$628</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>67%</td>\n",
+       "      <td>82%</td>\n",
+       "      <td>55%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,858</td>\n",
+       "      <td>$1,081,356</td>\n",
+       "      <td>$582</td>\n",
+       "      <td>83</td>\n",
+       "      <td>84</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,949</td>\n",
+       "      <td>$1,884,411</td>\n",
+       "      <td>$639</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,739</td>\n",
+       "      <td>$1,763,916</td>\n",
+       "      <td>$644</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>68%</td>\n",
+       "      <td>79%</td>\n",
+       "      <td>54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,468</td>\n",
+       "      <td>$917,500</td>\n",
+       "      <td>$625</td>\n",
+       "      <td>83</td>\n",
+       "      <td>84</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,635</td>\n",
+       "      <td>$3,022,020</td>\n",
+       "      <td>$652</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>67%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>427</td>\n",
+       "      <td>$248,087</td>\n",
+       "      <td>$581</td>\n",
+       "      <td>84</td>\n",
+       "      <td>84</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>89%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2,917</td>\n",
+       "      <td>$1,910,635</td>\n",
+       "      <td>$655</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4,761</td>\n",
+       "      <td>$3,094,650</td>\n",
+       "      <td>$650</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>81%</td>\n",
+       "      <td>54%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858</td>\n",
+       "      <td>$609</td>\n",
+       "      <td>84</td>\n",
+       "      <td>84</td>\n",
+       "      <td>95%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>91%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3,999</td>\n",
+       "      <td>$2,547,363</td>\n",
+       "      <td>$637</td>\n",
+       "      <td>77</td>\n",
+       "      <td>81</td>\n",
+       "      <td>66%</td>\n",
+       "      <td>80%</td>\n",
+       "      <td>53%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,761</td>\n",
+       "      <td>$1,056,600</td>\n",
+       "      <td>$600</td>\n",
+       "      <td>83</td>\n",
+       "      <td>84</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>96%</td>\n",
+       "      <td>90%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,635</td>\n",
+       "      <td>$1,043,130</td>\n",
+       "      <td>$638</td>\n",
+       "      <td>83</td>\n",
+       "      <td>84</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2,283</td>\n",
+       "      <td>$1,319,574</td>\n",
+       "      <td>$578</td>\n",
+       "      <td>83</td>\n",
+       "      <td>84</td>\n",
+       "      <td>94%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>91%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1,800</td>\n",
+       "      <td>$1,049,400</td>\n",
+       "      <td>$583</td>\n",
+       "      <td>84</td>\n",
+       "      <td>84</td>\n",
+       "      <td>93%</td>\n",
+       "      <td>97%</td>\n",
+       "      <td>90%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type Total Students Total School Budget  \\\n",
+       "school_name                                                            \n",
+       "Bailey High School       District          4,976          $3,124,928   \n",
+       "Cabrera High School       Charter          1,858          $1,081,356   \n",
+       "Figueroa High School     District          2,949          $1,884,411   \n",
+       "Ford High School         District          2,739          $1,763,916   \n",
+       "Griffin High School       Charter          1,468            $917,500   \n",
+       "Hernandez High School    District          4,635          $3,022,020   \n",
+       "Holden High School        Charter            427            $248,087   \n",
+       "Huang High School        District          2,917          $1,910,635   \n",
+       "Johnson High School      District          4,761          $3,094,650   \n",
+       "Pena High School          Charter            962            $585,858   \n",
+       "Rodriguez High School    District          3,999          $2,547,363   \n",
+       "Shelton High School       Charter          1,761          $1,056,600   \n",
+       "Thomas High School        Charter          1,635          $1,043,130   \n",
+       "Wilson High School        Charter          2,283          $1,319,574   \n",
+       "Wright High School        Charter          1,800          $1,049,400   \n",
+       "\n",
+       "                      Per Student Budget Average Math Score  \\\n",
+       "school_name                                                   \n",
+       "Bailey High School                  $628                 77   \n",
+       "Cabrera High School                 $582                 83   \n",
+       "Figueroa High School                $639                 77   \n",
+       "Ford High School                    $644                 77   \n",
+       "Griffin High School                 $625                 83   \n",
+       "Hernandez High School               $652                 77   \n",
+       "Holden High School                  $581                 84   \n",
+       "Huang High School                   $655                 77   \n",
+       "Johnson High School                 $650                 77   \n",
+       "Pena High School                    $609                 84   \n",
+       "Rodriguez High School               $637                 77   \n",
+       "Shelton High School                 $600                 83   \n",
+       "Thomas High School                  $638                 83   \n",
+       "Wilson High School                  $578                 83   \n",
+       "Wright High School                  $583                 84   \n",
+       "\n",
+       "                      Average Reading Score % Passing Math % Passing Reading  \\\n",
+       "school_name                                                                    \n",
+       "Bailey High School                       81            67%               82%   \n",
+       "Cabrera High School                      84            94%               97%   \n",
+       "Figueroa High School                     81            66%               81%   \n",
+       "Ford High School                         81            68%               79%   \n",
+       "Griffin High School                      84            93%               97%   \n",
+       "Hernandez High School                    81            67%               81%   \n",
+       "Holden High School                       84            93%               96%   \n",
+       "Huang High School                        81            66%               81%   \n",
+       "Johnson High School                      81            66%               81%   \n",
+       "Pena High School                         84            95%               96%   \n",
+       "Rodriguez High School                    81            66%               80%   \n",
+       "Shelton High School                      84            94%               96%   \n",
+       "Thomas High School                       84            93%               97%   \n",
+       "Wilson High School                       84            94%               97%   \n",
+       "Wright High School                       84            93%               97%   \n",
+       "\n",
+       "                      % Overall Passing  \n",
+       "school_name                              \n",
+       "Bailey High School                  55%  \n",
+       "Cabrera High School                 91%  \n",
+       "Figueroa High School                53%  \n",
+       "Ford High School                    54%  \n",
+       "Griffin High School                 91%  \n",
+       "Hernandez High School               54%  \n",
+       "Holden High School                  89%  \n",
+       "Huang High School                   54%  \n",
+       "Johnson High School                 54%  \n",
+       "Pena High School                    91%  \n",
+       "Rodriguez High School               53%  \n",
+       "Shelton High School                 90%  \n",
+       "Thomas High School                  91%  \n",
+       "Wilson High School                  91%  \n",
+       "Wright High School                  90%  "
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "perr_school_summary_df[\"Total Students\"] = perr_school_summary_df[\"Total Students\"].map('{:,.0f}'.format)\n",
     "\n",
@@ -2577,6 +2885,34 @@
     "perr_school_summary_df\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "60a31aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_schools = perr_school_summary_df.sort_values(['% Overall Passing'], ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "92d74269",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bottom_schools = perr_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True).head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8c1061",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
