--- a/school_district_analysis/PyCitySchools.ipynb
+++ b/school_district_analysis/PyCitySchools.ipynb
@@ -1763,7 +1763,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e5911a0d",
+   "id": "62978382",
    "metadata": {},
    "outputs": [
     {
@@ -2388,7 +2388,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "52c04c75",
+   "id": "8fd64c83",
    "metadata": {},
    "outputs": [
     {
@@ -2556,7 +2556,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "939fe57d",
+   "id": "c2cd34cd",
    "metadata": {},
    "outputs": [
     {
@@ -2889,7 +2889,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "6758a3fb",
+   "id": "f5cae348",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2899,7 +2899,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "61e8a91c",
+   "id": "52fb697c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2909,7 +2909,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "ec4cb5e9",
+   "id": "02a2f958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2925,7 +2925,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "4e5dff09",
+   "id": "ecbf3d0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2941,7 +2941,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "ddc2e83c",
+   "id": "bd16fd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2957,7 +2957,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "0a9560d1",
+   "id": "5b3f9759",
    "metadata": {},
    "outputs": [
     {
@@ -2994,7 +2994,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "207fd03f",
+   "id": "feb4a98b",
    "metadata": {},
    "outputs": [
     {
@@ -3031,7 +3031,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "1f354a74",
+   "id": "332fdbe6",
    "metadata": {},
    "outputs": [
     {
@@ -3137,7 +3137,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "e638af2f",
+   "id": "5f6a0cce",
    "metadata": {},
    "outputs": [
     {
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "2bab773c",
+   "id": "836b49a6",
    "metadata": {},
    "outputs": [
     {
@@ -3350,7 +3350,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "fb7d5c42",
+   "id": "f44fc0ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3369,7 +3369,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "ebfd57f1",
+   "id": "8e56b924",
    "metadata": {},
    "outputs": [
     {
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "dbad6c31",
+   "id": "46fd7643",
    "metadata": {},
    "outputs": [
     {
@@ -3423,7 +3423,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "2b8eb000",
+   "id": "08a44163",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3433,7 +3433,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "4f21f036",
+   "id": "85a0d641",
    "metadata": {},
    "outputs": [
     {
@@ -3471,7 +3471,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "8ba146cc",
+   "id": "abd10c1b",
    "metadata": {},
    "outputs": [
     {
@@ -3496,7 +3496,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "bc3015a0",
+   "id": "1c48b586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3507,7 +3507,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "caf14b4c",
+   "id": "e93c7da8",
    "metadata": {},
    "outputs": [
     {
@@ -3532,7 +3532,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "b7cae556",
+   "id": "2fe257bf",
    "metadata": {},
    "outputs": [
     {
@@ -3717,7 +3717,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "43cc5568",
+   "id": "fb799e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3735,7 +3735,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "476b26b1",
+   "id": "b33a17d9",
    "metadata": {},
    "outputs": [
     {
@@ -3761,7 +3761,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "96177a03",
+   "id": "19936d72",
    "metadata": {},
    "outputs": [
     {
@@ -3880,7 +3880,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "407ada85",
+   "id": "5d8a1738",
    "metadata": {},
    "outputs": [
     {
@@ -4002,7 +4002,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "69cff520",
+   "id": "b68274da",
    "metadata": {},
    "outputs": [
     {
@@ -4031,7 +4031,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "02c0820f",
+   "id": "a6ca6e42",
    "metadata": {},
    "outputs": [
     {
@@ -4060,7 +4060,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "8f5dc844",
+   "id": "e445f2f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4071,7 +4071,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "dace519f",
+   "id": "9de67cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4081,7 +4081,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "4e7b2534",
+   "id": "dcc7386b",
    "metadata": {},
    "outputs": [
     {
@@ -4451,7 +4451,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "ae1e5b30",
+   "id": "fe885ba5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4469,7 +4469,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "fe8a1ad3",
+   "id": "5f1cbe11",
    "metadata": {},
    "outputs": [
     {
@@ -4570,7 +4570,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "ca9553d9",
+   "id": "0115b77e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4588,7 +4588,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "fb6afa67",
+   "id": "57becf49",
    "metadata": {},
    "outputs": [
     {
@@ -4681,8 +4681,228 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 203,
+   "id": "37aeafeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "types = sc_df['type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "id": "b3a1bcd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_math_scores = perr_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = perr_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = perr_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = perr_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = perr_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "be44a6eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "1d59d204",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "037a7b6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 207,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "de5588fc",
+   "id": "de3f6b7e",
    "metadata": {},
    "outputs": [],
    "source": []
