Analysis finished peding Readme file

--- a/school_district_analysis/pandas_practice.ipynb
+++ b/school_district_analysis/pandas_practice.ipynb
@@ -533,7 +533,9 @@
    "id": "381b97d9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dp.Series(data={'weekday':[1,2,3,4,5,6,7],\"pencil\":[1,1,2,2,1,2,1]},index=[1,5],name='tools',)"
+   ]
   },
   {
    "cell_type": "code",
